[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monitorless"
description = "Monitorless is a performance degradation predictor."
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.2.0,<2.3.0",
  "scikit-learn>=1.5.0,<1.6.0",
  "pyarrow>=16.1.0,<16.2.0",
]
